--- a/InovApi/public/css/style.css
+++ b/InovApi/public/css/style.css
@@ -2,10 +2,69 @@
     border-radius: 0% 0% 20% 20%;
     --bs-text-opacity: 1;
     color: rgba(var(--bs-white-rgb), var(--bs-text-opacity)) !important;
+    background: rgba(0, 155, 186, 0.7);
+    margin: 0;
+    box-sizing: border-box;
+    border-width: 0;
+}
+
+.instyle {
     background: rgb(0, 123, 172);
-    background: linear-gradient(90deg, rgba(0, 123, 172, 1) 0%, rgba(0, 155, 186, 1) 100%);
+    background: linear-gradient(135deg, rgba(0, 123, 172, 0.7) 0%, rgba(0, 155, 186, 0.7) 100%);
+}
+
+.content {
+    position: fixed;
+    left: 0;
+    right: 0;
+    z-index: 2000;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+
+
+.nav-toggle-overide {
+    position: fixed !important;
+    left: 0;
+    right: 0;
+    z-index: 8000;
+}
+
+.bg-picture {
+    position: fixed;
+    left: 0;
+    right: 0;
+    display: block;
+    background-image: url("london.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+
+    width: 100%;
+    height: 100%;
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
+    z-index: -1;
 }
 
 .navsize {
     height: 80px;
+}
+
+.connect-box {
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+.text {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
