--- a/InovApi/templates/information/ccm.html.twig
+++ b/InovApi/templates/information/ccm.html.twig
@@ -1,5 +1,21 @@
 {% extends 'base.html.twig' %}
 {% block body %}
 
-<p class="m-5"> test </p>
+<div style="margin-top: 10%">
+<div class="page-header mt-5 m-5 content" style="margin-top: 10%;">
+    <h1>Innov'Anglais, c'est quoi ?</h1>
+    <p class="container m-5">
+    Le site Innov'Anglais a pour but de faciliter l'apprentissage de l'Anglais, de manière éducatif et sans prise de tête.
+    <br>Avec Innov'Anglais, testé vos connaissance linguistique grâce a notre outils situé en page
+    "<a href="{{path('app_apprendre')}}">Apprendre</a>".
+
+
+    <br>
+    Ce dernière est totalement gratuit et est dêvelopper continuellement.
+</p>
+</div>
+</div>
+
+
+
 {% endblock %}
