--- a/InovApi/templates/registration/register.html.twig
+++ b/InovApi/templates/registration/register.html.twig
@@ -3,15 +3,84 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
-
+    {% if app.user %}
+    <div class="mb-3 content">
+        You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+    </div>
+    {% endif %}
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.username) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+    <!--row d-flex justify-content-center align-items-center h-100 -->
+    <section class="h-100">
+        <div class="container py-5 h-100">
+            <div class="row d-flex justify-content-center align-items-center">
+                <div class="col-xl-10">
+                    <div class="card rounded-3 text-black connect-box">
+                        <div class="row g-0">
+                            <div class="col-lg-6">
+                                <div class="card-body p-md-5 mx-md-4 color-left">
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+                                    <div class="text-center">
+                                        <img src="./assets/logo.png" style="width: 185px;" alt="logo">
+                                        <h4 class="mt-1 mb-5 pb-1">Nous sommes Innov'Anglais</h4>
+                                    </div>
+
+                                        <p>Veuillez vous inscrire</p>
+
+                                        <div class="form-outline mb-4">
+                                            {{ form_row(registrationForm.username, {
+                                                label: 'Login de l\'utilisateur'
+                                            }) }}
+                                        </div>
+                                        <div class="form-outline mb-4">
+                                            {{ form_row(registrationForm.nom, {
+                                                label: 'Nom de l\'utilisateur'
+                                            }) }}
+                                        </div>
+                                        <div class="form-outline mb-4">
+                                            {{ form_row(registrationForm.prenom, {
+                                                label: 'Prenom de l\'utilisateur'
+                                            }) }}
+                                        </div>
+
+                                        <div class="form-outline mb-4">
+                                            {{ form_row(registrationForm.plainPassword, {
+                                                label: 'Mot de passe'
+                                            }) }}
+                                        </div>
+                                        <div class="form-outline mb-4">
+                                            {{ form_row(registrationForm.agreeTerms) }}
+                                        </div>
+                                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                                        <div class="text-center pt-1 mb-5 pb-1">
+                                            <button type="submit" class="btn btn-primary btn-block fa-lg mb-3">Créer un compte</button>
+                                        </div>
+
+                                </div>
+                            </div>
+                            <div class="col-lg-6 d-flex align-items-center instyle">
+                                <div class="text-white px-3 py-4 p-md-5 mx-md-4">
+                                    <div class="connect-box"></div>
+                                    <h4 class="mb-4">Nous sommes bien plus qu'une simple application</h4>
+                                    <p class="small mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    {#
+        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+        See https://symfony.com/doc/current/security/remember_me.html
+
+        <div class="checkbox mb-3">
+            <label>
+                <input type="checkbox" name="_remember_me"> Remember me
+            </label>
+        </div>
+    #}
+{{ form_end(registrationForm) }}
 {% endblock %}
